force-app/main/default/objects/Intake_Follow_Up__c/Intake_Follow_Up__c.object-meta.xml
<CustomObject>
    <description>Follow-Up tracker of an Intake record. It notes the day count, to whom it assigned and scheduled date.</description>
    <label>Intake Follow-Up</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>Follow-Up ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake Follow-Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>