force-app/main/default/objects/Intake_Follow_Up__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>