force-app/main/default/objects/Intake_Follow_Up__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created</label>
    <type>Checkbox</type>
</CustomField>