force-app/main/default/objects/Intake_Follow_Up__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Intake Follow-Ups</relationshipLabel>
    <relationshipName>Intake_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>